# Prog2NHF4

./: CMakeLists.txt  README.md  alapanyag.cpp  alapanyag.h  fajlkezelo.cpp  fajlkezelo.h  hozzavalo.cpp  hozzavalo.h  main.cpp  memtrace.h  menu.cpp  menu.h  recept.cpp  recept.h  tarolo.cpp  tarolo.h  test.cpp  test.h  teszt_recept.txt
ignore/: fajlkezelo.cpp  fajlkezelo.h
resources/: alapanyag.cpp  alapanyag.h  hozzavalo.cpp  menu.cpp  recept.h  tarolo.h  test.cpp
src/: fajlkezelo.h  hozzavalo.h  main.cpp  menu.h  recept.cpp  tarolo.cpp  test.h
